--- a/commandes/src/main/resources/application.properties
+++ b/commandes/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=8200
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-spring.application.name=commandes-service
+git checkout spring.application.name=commandes-service
