--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=api-gateway
 server.port=8765
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
+eureka.instance.hostname=localhost
+eureka.instance.ip-address=127.0.0.1
