--- a/commandes/src/main/resources/application.properties
+++ b/commandes/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8200
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=commandes-service
+eureka.instance.hostname=localhost
+eureka.instance.ip-address=127.0.0.1
