--- a/reclamations/pom.xml
+++ b/reclamations/pom.xml
@@ -26,6 +26,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+   			 <groupId>org.springframework.cloud</groupId>
+   			 <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+   			
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -63,7 +68,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
-						<name>microservices/${project.artifactId}:${project.version}</name>
+						<name>microservices/${project.artifactId}:V1</name>
 					</image>
 					<pullPolicy>IF_NOT_PRESENT</pullPolicy>
 </configuration>
