--- a/reclamations/pom.xml
+++ b/reclamations/pom.xml
@@ -68,10 +68,10 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
-						<name>microservices/${project.artifactId}:V1</name>
+						<name>foxward/${project.artifactId}:v1</name>
 					</image>
 					<pullPolicy>IF_NOT_PRESENT</pullPolicy>
-</configuration>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
