--- a/Staff/pom.xml
+++ b/Staff/pom.xml
@@ -71,7 +71,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
-						<name>microservices/${project.artifactId}:V1</name>
+						<name>foxward/${project.artifactId}:v1</name>
 					</image>
 					<pullPolicy>IF_NOT_PRESENT</pullPolicy>
 				</configuration>
