--- a/medical/pom.xml
+++ b/medical/pom.xml
@@ -54,12 +54,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-		<configuration>
-				<image>
-					<name>microservices/${project.artifactId}:V1</name>
-				</image>
-				<pullPolicy>IF_NOT_PRESENT</pullPolicy>
-		</configuration>
+				<configuration>
+					<image>
+						<name>foxward/${project.artifactId}:v1</name>
+					</image>
+					<pullPolicy>IF_NOT_PRESENT</pullPolicy>
+				</configuration>
 				
 			</plugin>
 		</plugins>
