--- a/medicaments/pom.xml
+++ b/medicaments/pom.xml
@@ -69,7 +69,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<image>
+						<name>microservices/${project.artifactId}:V1</name>
+					</image>
+					<pullPolicy>IF_NOT_PRESENT</pullPolicy>
+</configuration>
 			</plugin>
+			
 		</plugins>
 	</build>
 
